syntax = "proto3";

package grpcs;

import "google/protobuf/any.proto";

option go_package = "internal/grpcproto";

message StringData {
  string data = 1;
}

message IntData {
  int64 data = 1;
}

message InsertRequest {
  uint32 section = 1;
  map<string, google.protobuf.Any> data = 2;
}

message InsertResponse {
  string guid = 1;
  string error = 2;
}

message GetRequest {
  string guid = 1;
}

message GetResponse {
  map<string, google.protobuf.Any> data = 1;
  string error = 2;
}

message RemoveRequest {
  string guid = 1;
}

message RemoveResponse {
  string error = 1;
}

message UpdateRequest {
  string guid = 1;
  map<string, google.protobuf.Any> data = 2;
}

message UpdateResponse {
  string error = 1;
}

message ReplaceRequest {
  string guid = 1;
  map<string, google.protobuf.Any> data = 2;
}

message ReplaceResponse {
  string error = 1;
}

service Stash {
  rpc Insert(InsertRequest) returns (InsertResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Remove(RemoveRequest) returns (RemoveResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Replace(UpdateRequest) returns (UpdateResponse);
}

// protoc --go_out=. --go_opt=paths=source_relative  --go-grpc_out=. --go-grpc_opt=paths=source_relative  internal/grpcproto/stash.proto